Moved db operations to Repository classes, got dependency injection working
