# api-def/api.yaml
@@ -425,6 +425,16 @@ components:
           type: string
       xml:
         name: Tag
+    Room:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        label:
+          type: string
+      xml:
+        name: Room
     Event:
       required:
         - name
@@ -465,7 +475,7 @@ components:
           format: int64
           description: first 2 digits of event time in 24 hour clock
         room:
-          type: string
+          $ref: '#/components/schemas/Room'
         table:
           type: string
       xml:
