# api-def/out/lib/Model/Room.php
@@ -1,0 +1,70 @@
+<?php
+
+/**
+ * Room
+ *
+ * PHP version 7.1
+ *
+ * @package OpenAPIServer\Model
+ * @author  OpenAPI Generator team
+ * @link    https://github.com/openapitools/openapi-generator
+ */
+
+/**
+ * NOTE: This class is auto generated by the openapi generator program.
+ * https://github.com/openapitools/openapi-generator
+ */
+namespace OpenAPIServer\Model;
+
+use OpenAPIServer\Interfaces\ModelInterface;
+
+/**
+ * Room
+ *
+ * @package OpenAPIServer\Model
+ * @author  OpenAPI Generator team
+ * @link    https://github.com/openapitools/openapi-generator
+ */
+class Room implements ModelInterface
+{
+    private const MODEL_SCHEMA = <<<'SCHEMA'
+{
+  "type" : "object",
+  "properties" : {
+    "id" : {
+      "type" : "integer",
+      "format" : "int64"
+    },
+    "label" : {
+      "type" : "string"
+    }
+  },
+  "xml" : {
+    "name" : "Room"
+  }
+}
+SCHEMA;
+
+    /** @var int $id */
+    public $id;
+
+    /** @var string $label */
+    public $label;
+
+    public function __construct(int $id, string $label) {
+       $this->id = $id;
+       $this->label = $label;
+    }
+
+    /**
+     * Returns model schema.
+     *
+     * @param bool $assoc When TRUE, returned objects will be converted into associative arrays. Default FALSE.
+     *
+     * @return array
+     */
+    public static function getOpenApiSchema($assoc = false)
+    {
+        return json_decode(static::MODEL_SCHEMA, $assoc);
+    }
+}
